# Hatchmark

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/hatchmark-core/: Cargo.toml
crates/hatchmark-core/src/: analytics.rs  error.rs  ipc.rs  lib.rs  model.rs  paths.rs
crates/hatchmark-core/src/db/: bindings.rs  channels.rs  events.rs  layers.rs  mod.rs  schema.rs  settings.rs
crates/hatchmark-core/tests/: analytics_roundtrip.rs
crates/hatchmark-daemon/: Cargo.toml  build.rs
crates/hatchmark-daemon/src/: autostart.rs  hotkeys.rs  ipc_server.rs  main.rs  shutdown.rs  single_instance.rs  toast.rs  tray.rs  ui_launcher.rs
crates/hatchmark-ui/: Cargo.toml  tauri.conf.json
crates/hatchmark-ui/capabilities/: default.json
crates/hatchmark-ui/src/: daemon_client.rs  main.rs  state.rs
crates/hatchmark-ui/src/commands/: analytics.rs  bindings.rs  channels.rs  events.rs  layers.rs  mod.rs  profiles.rs  settings.rs  system.rs
crates/hatchmark-ui/web/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
crates/hatchmark-ui/web/src/: app.css  app.html
crates/hatchmark-ui/web/src/lib/: daemon.ts  tauri.ts  theme.ts  types.ts
crates/hatchmark-ui/web/src/lib/components/: BarPlot.svelte  ChannelCard.svelte  Heatmap.svelte  KeyCaptureButton.svelte  LinePlot.svelte  Sidebar.svelte  TitleBar.svelte
crates/hatchmark-ui/web/src/routes/: +layout.svelte  +page.svelte
crates/hatchmark-ui/web/src/routes/heatmap/: +page.svelte
crates/hatchmark-ui/web/src/routes/history/: +page.svelte
crates/hatchmark-ui/web/src/routes/hourly/: +page.svelte
crates/hatchmark-ui/web/src/routes/rollups/: +page.svelte
crates/hatchmark-ui/web/src/routes/settings/: +page.svelte
crates/hatchmark-ui/web/src/routes/today/: +page.svelte
