[workspace]
resolver = "2"
members = [
    "crates/hatchmark-core",
    "crates/hatchmark-daemon",
    "crates/hatchmark-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["EV9H <evanhuanghz@hotmail.com>"]
license = "MIT"

[workspace.dependencies]
anyhow       = "1"
thiserror    = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
rusqlite     = { version = "0.31", features = ["bundled", "chrono"] }
chrono       = { version = "0.4", features = ["serde"] }
directories  = "5"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio        = { version = "1", features = ["rt", "net", "sync", "io-util", "time", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
